# libera-laser

./: .dropboxignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TRADEMARKS.md
.github/workflows/: ci.yml
apps/: LaserStreamTest.cpp  main.cpp
build-debug/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libera-main  smoke_controller  test_etherdream_reconnect  test_etherdream_status
cmake/: Libusb.cmake  Sanitizers.cmake
docs/: controller_backends.md  integration.md  plugins.md
examples/: CMakeLists.txt  example_plugin.cpp  frame_mode_demo.cpp  lightspace_net_probe.cpp  simple_frame_avb_demo.cpp  simple_frame_demo.cpp  stream_callback_demo.cpp
examples/laser_tool/: CMakeLists.txt  ILDAParser.cpp  ILDAParser.h  main.cpp
include/: libera.h
include/libera/: System.hpp
include/libera/avb/: AvbController.hpp  AvbControllerInfo.hpp  AvbManager.hpp
include/libera/core/: ActiveControllerMap.hpp  BufferEstimator.hpp  ByteRead.hpp  ControllerCache.hpp  ControllerErrorTypes.hpp  ControllerManagerBase.hpp  DacDiscovery.hpp  FrameScheduler.hpp  GlobalDacManager.hpp  LaserController.hpp  LaserControllerStreaming.hpp  LaserDevice.hpp  LaserDeviceBase.hpp  LaserPoint.hpp  NetworkLaserDevice.hpp  PointStreamFramer.hpp  SingleControllerManagerBase.hpp  ThreadUtils.hpp
include/libera/core/Dummy/: DummyController.hpp
include/libera/etherdream/: EtherDreamConfig.hpp  EtherDreamController.hpp  EtherDreamControllerInfo.hpp  EtherDreamDevice.hpp  EtherDreamDeviceInfo.hpp  EtherDreamDiscoverer.hpp  EtherDreamManager.hpp  EtherDreamResponse.hpp
include/libera/helios/: HeliosController.hpp  HeliosControllerInfo.hpp  HeliosDevice.hpp  HeliosDeviceInfo.hpp  HeliosManager.hpp  HeliosTransportSupport.hpp
include/libera/idn/: IdnController.hpp  IdnControllerInfo.hpp  IdnDeviceInfo.hpp  IdnManager.hpp
include/libera/lasercubenet/: LaserCubeNetConfig.hpp  LaserCubeNetController.hpp  LaserCubeNetControllerInfo.hpp  LaserCubeNetDevice.hpp  LaserCubeNetDeviceInfo.hpp  LaserCubeNetManager.hpp  LaserCubeNetStatus.hpp
include/libera/lasercubeusb/: LaserCubeUsbConfig.hpp  LaserCubeUsbController.hpp  LaserCubeUsbControllerInfo.hpp  LaserCubeUsbDevice.hpp  LaserCubeUsbDeviceInfo.hpp  LaserCubeUsbManager.hpp
include/libera/lightspacenet/: LightSpaceNetConfig.hpp  LightSpaceNetController.hpp  LightSpaceNetControllerInfo.hpp  LightSpaceNetManager.hpp  LightSpaceNetPacket.hpp  LightSpaceNetStatus.hpp
include/libera/log/: Log.hpp
include/libera/net/: Deadline.hpp  NetService.hpp  TcpClient.hpp  TimeoutConfig.hpp  UdpSocket.hpp
include/libera/plugin/: PluginController.hpp  PluginControllerInfo.hpp  PluginManager.hpp  PluginRegistry.hpp  libera_plugin.h
src/EtherDream/: EtherDreamCommand.cpp  EtherDreamController.cpp  EtherDreamDevice.cpp  EtherDreamDiscoverer.cpp  EtherDreamManager.cpp  EtherDreamResponse.cpp
src/avb/: AvbAudioHost.hpp  AvbBackendState.cpp  AvbBackendState.hpp  AvbController.cpp  AvbDeviceRuntime.cpp  AvbDeviceRuntime.hpp  AvbManager.cpp  CoreAudioHost.cpp
src/core/: BufferEstimator.cpp  DacDiscovery.cpp  FrameScheduler.cpp  GlobalDacManager.cpp  LaserController.cpp  LaserControllerStreaming.cpp  LaserDevice.cpp  LaserDeviceBase.cpp  NetworkLaserDevice.cpp  PointStreamFramer.cpp  System.cpp
src/helios/: HeliosController.cpp  HeliosDevice.cpp  HeliosManager.cpp
src/idn/: IdnController.cpp  IdnManager.cpp
src/lasercubenet/: LaserCubeNetController.cpp  LaserCubeNetControllerInfo.cpp  LaserCubeNetDevice.cpp  LaserCubeNetDeviceInfo.cpp  LaserCubeNetManager.cpp  LaserCubeNetStatus.cpp
src/lasercubeusb/: LaserCubeUsbController.cpp  LaserCubeUsbDevice.cpp  LaserCubeUsbManager.cpp
src/lightspacenet/: LightSpaceNetController.cpp  LightSpaceNetManager.cpp  LightSpaceNetPacket.cpp  LightSpaceNetStatus.cpp
src/log/: Log.cpp
src/net/: NetService.cpp
src/plugin/: PluginController.cpp  PluginManager.cpp  PluginRegistry.cpp
tests/: CMakeLists.txt  smoke_controller.cpp  test_avb_backend_state.cpp  test_core_buffer_estimator.cpp  test_core_byte_buffer.cpp  test_core_content_source_switch.cpp  test_core_controller_cache.cpp  test_core_controller_status.cpp  test_core_encoding.cpp  test_core_frame_advance.cpp  test_core_frame_request.cpp  test_core_frame_scheduler.cpp  test_core_frame_transition.cpp  test_core_projected_render_time.cpp  test_core_queue_budget_floor.cpp  test_core_scanner_sync.cpp  test_core_single_controller_manager_base.cpp  test_etherdream_begin_timeout_reconnect.cpp  test_etherdream_buffer_projection.cpp  test_etherdream_buffer_target.cpp  test_etherdream_command.cpp  test_etherdream_firmware_probe.cpp  test_etherdream_packet_latency.cpp  test_etherdream_protocol_probe.cpp  test_etherdream_reconnect.cpp  test_etherdream_status.cpp  test_etherdream_stream_order.cpp  test_etherdream_underflow_probe.cpp  test_helios_timing.cpp  test_helios_usb_stream.cpp  test_lasercubenet_buffer_target.cpp  test_lasercubenet_point_rate.cpp  test_lasercubenet_status.cpp  test_lightspacenet_packet.cpp  test_lightspacenet_stream.cpp  test_point_stream_framer.cpp
